"Quick Fixes" to various IDE warnings
Signed-off-by: currantw <taylor.curran@improving.com>